# homeserver

./: .env.example  AGENTS.md  README.md  device_list.text  pyproject.toml
.claude/skills/deploy-pi/: SKILL.md
.claude/skills/homeserver-health/: SKILL.md
.github/: dependabot.yml
.github/workflows/: test.yml
deploy/: README.md  collector-watchdog.timer
deploy/grafana/dashboards/: home-climate-dashboard.json  home-power-dashboard.json  homeserver-health.json
deploy/grafana/provisioning/dashboards/: home.yaml
deploy/grafana/provisioning/datasources/: victoriametrics.yaml
deploy/node-exporter/: prometheus-node-exporter.default
deploy/systemd/: collector-watchdog.service  cost-update.service  cost-update.timer  echonet.service  rpi-metrics.service  rpi-metrics.timer  switchbot.service  victoria-metrics.service  vm-backup.service  vm-backup.timer
deploy/victoria-metrics/: scrape.yml
docs/: runbook.md
docs/incidents/: 2026-07-05-influxdb-scraper-bloat.md  2026-07-06-bluetoothd-dbus-outage.md  2026-07-20-daily-panel-stale-carry.md
scripts/: deploy-to-pi.sh  health-check.sh
src/cli/: cost.py  echonet.py  switchbot_ble.py  sync_data.py  tariff.py
src/homeserver/: __init__.py
tests/: __init__.py  test_cost.py  test_echonet.py  test_switchbot_ble.py  test_switchbot_ble_more.py  test_sync_data.py  test_sync_data_more.py  test_tariff.py
