[project]
name = "homeserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Munetaka Mizutani", email = "mu.mizutani@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer>=0.19.2",
    "bleak>=1.1.1",
]

[project.scripts]
homeserver = "homeserver:main"
sb = "cli.sync_data:app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
