[project]
name = "homeserver"
version = "0.1.0"
description = "SwitchBot/ECHONET Lite home telemetry collectors for Raspberry Pi (VictoriaMetrics + Grafana)"
readme = "README.md"
authors = [
    { name = "Munetaka Mizutani", email = "mu.mizutani@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer>=0.19.2",
    "bleak>=1.1.1",
]

[project.scripts]
homeserver = "homeserver:main"
sb = "cli.sync_data:app"
el = "cli.echonet:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "responses>=0.26.2",
    "time-machine>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
# 計測対象は実装本体のみ (homeserver/ は Hello World スタブ)
source = ["src/cli"]

[tool.coverage.report]
# 現在の実測値を下限として退行をブロックする。テスト拡充に合わせて引き上げる
fail_under = 80
show_missing = true
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
